src/test/ui/const-generics/nested-type.min.stderr
error: `[u8; _]` is forbidden as the type of a const generic parameter
  --> $DIR/nested-type.rs:7:21
   |
LL |   struct Foo<const N: [u8; {
   |  _____________________^
LL | |     struct Foo<const N: usize>;
LL | |
LL | |     impl<const N: usize> Foo<N> {
...  |
LL | |
LL | | }]>;
   | |__^
   |
   = note: the only supported types are integers, `bool` and `char`
   = note: more complex types are supported with `#[feature(const_generics)]`

error[E0015]: calls in constants are limited to constant functions, tuple structs and tuple variants
  --> $DIR/nested-type.rs:16:5
   |
LL |     Foo::<17>::value()
   |     ^^^^^^^^^^^^^^^^^^

error[E0080]: evaluation of constant value failed
  --> $DIR/nested-type.rs:16:5
   |
LL |     Foo::<17>::value()
   |     ^^^^^^^^^^^^^^^^^^ calling non-const function `Foo::{{constant}}#0::Foo::<17_usize>::value`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0015, E0080.
For more information about an error, try `rustc --explain E0015`.
